--- a/src/index.html
+++ b/src/index.html
@@ -90,12 +90,18 @@
     <p>And that is how I made the acquaintance of the little prince.</p>   
     <hr>
 
+<div class="example">
     <div class="box">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur unde itaque, ab eos est deleniti possimus consectetur illum facilis soluta eveniet. Tenetur magnam, perferendis eveniet provident enim quas repellendus dolore.
     </div>
     <div class="box">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ullam dolor esse. Assumenda quos rem, commodi harum ea sint accusantium dolor rerum, quae voluptatibus ipsam repellendus? Exercitationem autem et rem.
     </div>
+    <div class="box red">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ullam dolor esse. Assumenda quos rem, commodi harum ea sint accusantium dolor rerum, quae voluptatibus ipsam repellendus? Exercitationem autem et rem.
+    </div>
+</div>
+
 
 </body>
 </html> 
